# gather

./: .eslintrc.cjs  .gitignore  .prettierrc  05206851.css  9c17c836.js  Cargo.toml  README.md  default.nix  flake.nix  index.html  optimize-wasms.sh  package-lock.json  package.json
.github/: funding.yml
.github/workflows/: github-build-and-deploy-rocket-action.yml  test.yaml
.templates/app/: dna.instructions.hbs  entry-type.instructions.hbs  web-app.instructions.hbs
.templates/app+applet/coordinator-zome/ui/applet/src/: index.ts.hbs
.templates/app+applet/web-app/ui/app/: vite.config.ts.hbs
.templates/app/coordinator-zome/ui/src/: holochain-app.ts.hbs  {{#if (not (eq (pascal_case zome_manifest.name) "Profiles"))}}holochain-app.ts{{¡if}}.hbs
.templates/app/field-types/AgentPubKey/SearchAgent-AgentAvatar/edit/: imports.hbs  render.hbs  scoped-elements.hbs
.templates/app/field-types/AgentPubKey/SearchAgent/detail/: imports.hbs  scoped-elements.hbs
.templates/app/field-types/EntryHash/Image/detail/: imports.hbs  render.hbs  scoped-elements.hbs
.templates/app/field-types/Vec/edit/: render.hbs
.templates/app/web-app/: package.json.hbs
.templates/app/web-app/ui/: index.html.hbs  package.json.hbs
.templates/app/web-app/ui/src/: holochain-app.ts.hbs  shared-styles.ts.hbs
_site-dev/: index.html
applet/demo/: index.html
applet/src/: cross-applet-main.ts
assets/: site.webmanifest
config/: rocket.config.js
crates/hc_zome_trait_notifications/: Cargo.toml
crates/hc_zome_trait_notifications/src/: lib.rs
crates/hc_zome_trait_pending_notifications/: Cargo.toml
crates/hc_zome_traits/: Cargo.toml
crates/hc_zome_traits/src/: lib.rs
dnas/gather/workdir/: dna.yaml
dnas/gather/zomes/coordinator/alerts/: Cargo.toml
dnas/gather/zomes/coordinator/alerts/src/: alerts.rs  lib.rs
dnas/gather/zomes/coordinator/assemble/: Cargo.toml
dnas/gather/zomes/coordinator/assemble/src/: lib.rs
dnas/gather/zomes/coordinator/attachments/: Cargo.toml
dnas/gather/zomes/coordinator/attachments/src/: lib.rs
dnas/gather/zomes/coordinator/cancellations/: Cargo.toml
dnas/gather/zomes/coordinator/cancellations/src/: cancellation.rs  lib.rs
dnas/gather/zomes/coordinator/file_storage/: Cargo.toml
dnas/gather/zomes/coordinator/gather/: Cargo.toml
dnas/gather/zomes/coordinator/gather/src/: all_events.rs  attendees_attestation.rs  cancellation.rs  event.rs  event_to_attendees.rs  events_by_author.rs  global_collections.rs  interested.rs  lib.rs  my_events.rs  notifications.rs  possible_participant.rs  proposal.rs
dnas/gather/zomes/coordinator/gather/tests/: cancellation.rs  events_by_author.rs
dnas/gather/zomes/coordinator/gather/tests/common/: mod.rs
dnas/gather/zomes/coordinator/profiles/: Cargo.toml
dnas/gather/zomes/integrity/alerts/: Cargo.toml
dnas/gather/zomes/integrity/assemble/: Cargo.toml
dnas/gather/zomes/integrity/assemble/src/: lib.rs
dnas/gather/zomes/integrity/attachments/: Cargo.toml
dnas/gather/zomes/integrity/attachments/src/: lib.rs
dnas/gather/zomes/integrity/cancellations/: Cargo.toml
dnas/gather/zomes/integrity/cancellations/src/: lib.rs
dnas/gather/zomes/integrity/file_storage/: Cargo.toml
dnas/gather/zomes/integrity/gather/: Cargo.toml
dnas/gather/zomes/integrity/profiles/: Cargo.toml
docs/: DESIGN.md
nix/: sources.json
site/pages/: index.rocket.html  pageTreeData.rocketGenerated.json
site/src/css/: page.css
site/src/elements/: custom-social-link.js
site/src/layouts/: layoutData.js
tests/: package.json
tests/src/: event-lifecycle.test.ts  event-proposal-lifecycle.test.ts  event.test.ts  proposal-lifecycle.test.ts  utils.ts  zome-traits.test.ts
tests/src/gather/gather/: attendees-attestation.test.ts  event.test.ts
ui/: index.html  lit-localize.json  package.json  tsconfig.json  vite.config.ts
ui/app/: index.html  package.json  vite.config.ts
ui/app/src/: holochain-app.ts
ui/applet/: package.json  rollup.config.js  vite.config.ts
ui/applet/demo/: index.html
ui/applet/src/: applet-main.ts  cross-applet-main.ts  gather-applet-main.ts  index.ts  we-applet.ts
ui/applet/workdir/: web-happ.yaml
ui/lib/: package.json
ui/lib/src/: context.ts  gather-client.ts  gather-store.ts  index.ts  types.ts  utils.ts
ui/lib/src/elements/: all-events-proposals.ts  all-events.ts  attendees-for-event.ts  create-event-proposal.ts  create-event.ts  edit-event.ts  event-detail.ts  event-proposal-detail.ts  event-proposal-summary.ts  event-summary.ts  events-by-author.ts  events-calendar.ts  events-for-agent.ts  events-for-attendee.ts  gather-context.ts  my-events-proposals.ts  my-events.ts  participants-for-event.ts
ui/src/: context.ts  gather-client.ts  gather-store.ts  holochain-app.ts  index.ts  locales.ts  shared-styles.ts  styles.ts  types.ts  utils.ts
ui/src/alerts/: alerts-client.ts  alerts-store.ts  types.ts
ui/src/elements/: all-events.ts  create-event.ts  event-detail.ts  event-summary.ts  events-by-author.ts  events-calendar.ts  events-filter.ts  my-alerts.ts  my-events.ts  participants-for-event.ts
ui/src/gather/gather/: activity.ts  context.ts  gather-client.ts  gather-store.ts  stores.ts  types.ts  utils.ts
ui/src/gather/gather/elements/: agents-avatars.ts  all-events.ts  attendees-attestation-detail.ts  attendees-attestation-summary.ts  attendees-attestations-for-attendee.ts  attendees-attestations-for-event.ts  attendees-for-event.ts  call-to-action-needs.ts  call-to-action-unsatisfied-needs-summary.ts  cancellation-detail.ts  cancellation-summary.ts  create-attendees-attestation.ts  create-cancellation.ts  create-event.ts  edit-attendees-attestation.ts  edit-cancellation.ts  edit-event.ts  edit-proposal.ts  event-activity.ts  event-detail.ts  event-summary.ts  events-calendar.ts  events-filter.ts  events-for-attendee.ts  gather-context.ts  interested-button.ts  my-alerts.ts  my-events.ts  participants-for-event.ts  participate-dialog.ts  profile-list-item.ts  proposal-detail.ts  proposal-summary.ts  search-agents.ts
ui/xliff/: ca.xlf  es.xlf  sv.xlf
workdir/: happ.yaml  web-happ.yaml
(+36 files in other folders)
