[profile.dev]
opt-level = "z"

[profile.release]
opt-level = "z"

[workspace]
resolver = "2"
members = ["dnas/*/zomes/coordinator/*", "dnas/*/zomes/integrity/*"]

[workspace.dependencies]
hdi = "0.3.2"
hdk = "0.2.2"
holochain = "0.2.2"
serde = "1"

[workspace.dependencies.assemble]
path = "dnas/gather/zomes/coordinator/assemble"

[workspace.dependencies.assemble_integrity]
path = "dnas/gather/zomes/integrity/assemble"

[workspace.dependencies.alerts_integrity]
path = "dnas/gather/zomes/integrity/alerts"

[workspace.dependencies.file_storage]
path = "dnas/gather/zomes/coordinator/file_storage"

[workspace.dependencies.file_storage_integrity]
path = "dnas/gather/zomes/integrity/file_storage"

[workspace.dependencies.gather]
path = "dnas/gather/zomes/coordinator/gather"

[workspace.dependencies.gather_integrity]
path = "dnas/gather/zomes/integrity/gather"

[workspace.dependencies.profiles]
path = "dnas/gather/zomes/coordinator/profiles"

[workspace.dependencies.profiles_integrity]
path = "dnas/gather/zomes/integrity/profiles"
