[profile.dev]
opt-level = "z"

[profile.release]
lto = true
opt-level = "z"

[workspace]
resolver = "2"
members = ["dnas/*/zomes/coordinator/*", "dnas/*/zomes/integrity/*"]

[workspace.dependencies]
hdi = "0.3.4"
hdk = "0.2.4"
holochain = "0.2.4"
serde = "1"
hc_zome_traits = { git = "https://github.com/holochain-open-dev/zome-traits", branch = "main" }
hc_zome_trait_pending_notifications = { git = "https://github.com/darksoil-studio/notifications", branch = "main" }

[workspace.dependencies.assemble]
path = "dnas/gather/zomes/coordinator/assemble"

[workspace.dependencies.assemble_integrity]
path = "dnas/gather/zomes/integrity/assemble"

[workspace.dependencies.alerts_integrity]
path = "dnas/gather/zomes/integrity/alerts"

[workspace.dependencies.file_storage]
path = "dnas/gather/zomes/coordinator/file_storage"

[workspace.dependencies.file_storage_integrity]
path = "dnas/gather/zomes/integrity/file_storage"

[workspace.dependencies.gather]
path = "dnas/gather/zomes/coordinator/gather"

[workspace.dependencies.gather_integrity]
path = "dnas/gather/zomes/integrity/gather"

[workspace.dependencies.profiles]
path = "dnas/gather/zomes/coordinator/profiles"

[workspace.dependencies.profiles_integrity]
path = "dnas/gather/zomes/integrity/profiles"
