[package]
name = "alerts"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "alerts"

[dependencies]
hdk = { workspace = true }

serde = { workspace = true }

alerts_integrity = { workspace = true }
hc_zome_notifications_types = { git = "https://github.com/darksoil-studio/notifications", branch = "for-hdk-0.3.0-beta-dev" }
