[package]
name = "attachments"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "attachments"

[dependencies]
hdk = { workspace = true }

serde = { workspace = true }

hc_zome_attachments_coordinator = { git = "https://github.com/lightningrodlabs/we", branch = "holochain-0.2.1" }
