[package]
name = "gather"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "gather"

[dependencies]
hdk = { workspace = true }
serde = { workspace = true }

gather_integrity = { workspace = true }

[dev-dependencies]
fixt = "0.2.3-rc.0"
futures = { version = "0.3.1", default-features = false }
holochain = { workspace = true, features = ["test_utils", "sweetest"] }
tokio = { version = "1.24", features = ["full"] }
