[package]
name = "gather"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "gather"

[dependencies]
hdk = { workspace = true }
serde = { workspace = true }

gather_integrity = { workspace = true }

hc_zome_trait_pending_notifications = { workspace = true }
hc_zome_traits = { workspace = true }
hrl = { git = "https://github.com/holochain-open-dev/common", branch = "for-hdk-0.3.0-beta-dev" }

xliff = { git = "https://github.com/kkostov/hb-rs-xliff", branch = "master" }

[dev-dependencies]
fixt = "*"
futures = { version = "0.3.1", default-features = false }
holochain = { workspace = true, features = ["test_utils", "sweetest"] }
tokio = { version = "1.24", features = ["full"] }
