[package]
name = "cancellations_integrity"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "cancellations_integrity"

[dependencies]
hdi = { workspace = true }

serde = { workspace = true }
hc_zome_cancellations_integrity = { git = "https://github.com/holochain-open-dev/cancellations", branch = "for-hdk-v0.2.3-rc.0" }
